--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
 }
 
 .App-header {
-	background-color: #282c34;
+	background-color: #ffe2e2;
 	min-height: 100vh;
 	font-size: calc(10px + 2vmin);
 	color: white;
